Some changes to new export framework

--- a/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
+++ b/src/Libraries/SmartStore.Core/SmartStore.Core.csproj
@@ -159,8 +159,9 @@
     <Compile Include="Domain\Catalog\PriceDisplayType.cs" />
     <Compile Include="Domain\Directory\QuantityUnit.cs" />
     <Compile Include="Domain\Common\RestrictionContextTypes.cs" />
-    <Compile Include="Domain\Export\ExportCore.cs" />
-    <Compile Include="Domain\Export\ExportProfile.cs" />
+    <Compile Include="Domain\DataExchange\ExportCore.cs" />
+    <Compile Include="Domain\DataExchange\ExportFilter.cs" />
+    <Compile Include="Domain\DataExchange\ExportProfile.cs" />
     <Compile Include="Domain\Messages\EmailAttachmentStorageLocation.cs" />
     <Compile Include="Domain\Messages\QueuedEmailAttachment.cs" />
     <Compile Include="Domain\Payments\PaymentMethod.cs" />
