--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -331,6 +331,10 @@
     <Compile Include="Migrations\201507250039446_Merge2.Designer.cs">
       <DependentUpon>201507250039446_Merge2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508042207146_RemoveKeepAlive.cs" />
+    <Compile Include="Migrations\201508042207146_RemoveKeepAlive.Designer.cs">
+      <DependentUpon>201508042207146_RemoveKeepAlive.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -626,6 +630,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201507250039446_Merge2.resx">
       <DependentUpon>201507250039446_Merge2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508042207146_RemoveKeepAlive.resx">
+      <DependentUpon>201508042207146_RemoveKeepAlive.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
