Minor UI fix for TaskScheduler

--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -92,7 +92,7 @@
     <customErrors mode="RemoteOnly" />
     <sessionState mode="InProc" />
     <trace enabled="true" localOnly="true" pageOutput="true" requestLimit="40" />
-    <compilation debug="true" targetFramework="4.5.1" batch="true" optimizeCompilations="true">
+    <compilation debug="true" targetFramework="4.5.1" batch="true" optimizeCompilations="false">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
