--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -120,6 +120,7 @@
     </Compile>
     <Compile Include="Caching\EfCacheImpl.cs" />
     <Compile Include="Caching\EfCachingPolicy.cs" />
+    <Compile Include="Mapping\DataExchange\ExportDeploymentMap.cs" />
     <Compile Include="Mapping\Directory\QuantityUnitMap.cs" />
     <Compile Include="Mapping\DataExchange\ExportProfileMap.cs" />
     <Compile Include="Mapping\Messages\QueuedEmailAttachmentMap.cs" />
@@ -332,9 +333,9 @@
     <Compile Include="Migrations\201507250039446_Merge2.Designer.cs">
       <DependentUpon>201507250039446_Merge2.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201508051818404_ExportFramework.cs" />
-    <Compile Include="Migrations\201508051818404_ExportFramework.Designer.cs">
-      <DependentUpon>201508051818404_ExportFramework.cs</DependentUpon>
+    <Compile Include="Migrations\201508070937542_ExportFramework.cs" />
+    <Compile Include="Migrations\201508070937542_ExportFramework.Designer.cs">
+      <DependentUpon>201508070937542_ExportFramework.cs</DependentUpon>
     </Compile>
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
@@ -633,8 +634,8 @@
     <EmbeddedResource Include="Migrations\201507250039446_Merge2.resx">
       <DependentUpon>201507250039446_Merge2.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201508051818404_ExportFramework.resx">
-      <DependentUpon>201508051818404_ExportFramework.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201508070937542_ExportFramework.resx">
+      <DependentUpon>201508070937542_ExportFramework.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
