--- a/src/Plugins/SmartStore.WebApi/SmartStore.WebApi.csproj
+++ b/src/Plugins/SmartStore.WebApi/SmartStore.WebApi.csproj
@@ -205,6 +205,7 @@
     <Compile Include="Controllers\OData\ProductVariantAttributesController.cs" />
     <Compile Include="Controllers\OData\QuantityUnitsController.cs" />
     <Compile Include="Controllers\OData\PaymentMethodsController.cs" />
+    <Compile Include="Controllers\OData\SyncMappingsController.cs" />
     <Compile Include="Controllers\OData\TierPricesController.cs" />
     <Compile Include="Controllers\OData\ProductAttributesController.cs" />
     <Compile Include="Controllers\OData\ProductsController.cs" />
