--- a/src/Libraries/SmartStore.Services/packages.config
+++ b/src/Libraries/SmartStore.Services/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.4.1" targetFramework="net45" />
+  <package id="CronExpressionDescriptor" version="1.17.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
   <package id="EPPlus" version="4.0.3" targetFramework="net45" />
   <package id="fasterflect" version="2.1.3" targetFramework="net45" />
@@ -11,6 +12,7 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="ncrontab" version="2.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.6" targetFramework="net45" />
   <package id="NReco.PdfGenerator" version="1.1.5.0" targetFramework="net451" />
   <package id="System.Linq.Dynamic" version="1.0.0" targetFramework="net45" />
