--- a/src/Presentation/SmartStore.Web/Web.config
+++ b/src/Presentation/SmartStore.Web/Web.config
@@ -81,8 +81,8 @@
     <add key="sm:TempDirectory" value="~/App_Data/_temp" />
     <add key="sm:BizImportMediaDirectory" value="~/Media/Uploaded/static" />
     <add key="sm:PluginsIgnoredDuringInstallation" value="SmartStore.DemoShopControlling, SmartStore.WebApi, SmartStore.Glimpse, SmartStore.DevTools" />
-    <!-- Task Scheduler sweep interval in seconds (at least 60 recommended) -->
-    <add key="sm:TaskSchedulerSweepInterval" value="60" />
+    <!-- Task Scheduler sweep interval in minutes (1 recommended) -->
+    <add key="sm:TaskSchedulerSweepInterval" value="1" />
     <!-- uncomment and set this to your store's task scheduler base url when the automatic url resolution fails (e.g. 'http://www.mystore.com/taskscheduler') -->
     <!--
     <add key="sm:TaskSchedulerBaseUrl" value="" />
