--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -337,6 +337,14 @@
     <Compile Include="Migrations\201508091512101_ExportFramework.Designer.cs">
       <DependentUpon>201508091512101_ExportFramework.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201508211346171_Merge1.cs" />
+    <Compile Include="Migrations\201508211346171_Merge1.Designer.cs">
+      <DependentUpon>201508211346171_Merge1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508221015215_ExportFramework1.cs" />
+    <Compile Include="Migrations\201508221015215_ExportFramework1.Designer.cs">
+      <DependentUpon>201508221015215_ExportFramework1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
@@ -636,6 +644,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201508091512101_ExportFramework.resx">
       <DependentUpon>201508091512101_ExportFramework.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508211346171_Merge1.resx">
+      <DependentUpon>201508211346171_Merge1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508221015215_ExportFramework1.resx">
+      <DependentUpon>201508221015215_ExportFramework1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
