Resolves #774 Installation error due to duplicate pending migration changes

--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -344,6 +344,10 @@
     <Compile Include="Migrations\201508142203054_CronExpressions.Designer.cs">
       <DependentUpon>201508142203054_CronExpressions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509031112324_Merge3.cs" />
+    <Compile Include="Migrations\201509031112324_Merge3.Designer.cs">
+      <DependentUpon>201509031112324_Merge3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
     <Compile Include="Setup\DbMigrationContext.cs" />
@@ -648,6 +652,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201508142203054_CronExpressions.resx">
       <DependentUpon>201508142203054_CronExpressions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509031112324_Merge3.resx">
+      <DependentUpon>201509031112324_Merge3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
