--- a/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
+++ b/src/Libraries/SmartStore.Data/SmartStore.Data.csproj
@@ -358,6 +358,14 @@
     <Compile Include="Migrations\201509021536425_ExportFramework1.Designer.cs">
       <DependentUpon>201509021536425_ExportFramework1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201509150927576_Merge3.cs" />
+    <Compile Include="Migrations\201509150927576_Merge3.Designer.cs">
+      <DependentUpon>201509150927576_Merge3.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201509150931528_ExportFramework2.cs" />
+    <Compile Include="Migrations\201509150931528_ExportFramework2.Designer.cs">
+      <DependentUpon>201509150931528_ExportFramework2.cs</DependentUpon>
+    </Compile>
     <Compile Include="Setup\Builder\PermissionMigrator.cs" />
     <Compile Include="Setup\Builder\SettingsBuilder.cs" />
     <Compile Include="Setup\Builder\SettingsMigrator.cs" />
@@ -672,6 +680,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201509021536425_ExportFramework1.resx">
       <DependentUpon>201509021536425_ExportFramework1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509150927576_Merge3.resx">
+      <DependentUpon>201509150927576_Merge3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509150931528_ExportFramework2.resx">
+      <DependentUpon>201509150931528_ExportFramework2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Sql\Indexes.sql" />
     <EmbeddedResource Include="Sql\StoredProcedures.sql" />
