--- a/src/Plugins/SmartStore.GoogleMerchantCenter/SmartStore.GoogleMerchantCenter.csproj
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/SmartStore.GoogleMerchantCenter.csproj
@@ -153,7 +153,7 @@
       <Link>Properties\AssemblyVersionInfo.cs</Link>
     </Compile>
     <Compile Include="AdminMenu.cs" />
-    <Compile Include="Controllers\FeedFroogleController.cs" />
+    <Compile Include="Controllers\FeedGoogleMerchantCenterController.cs" />
     <Compile Include="Data\GoogleProductObjectContext.cs" />
     <Compile Include="Data\GoogleProductRecordMap.cs" />
     <Compile Include="Data\Migrations\201403112356126_Initial.cs" />
@@ -173,9 +173,10 @@
     <Compile Include="Domain\GoogleProductRecord.cs" />
     <Compile Include="Events.cs" />
     <Compile Include="Extensions\MiscExtensions.cs" />
-    <Compile Include="FroogleFeedPlugin.cs" />
+    <Compile Include="GoogleMerchantCenterFeedPlugin.cs" />
     <Compile Include="FroogleSettings.cs" />
-    <Compile Include="StaticFileGenerationTask.cs" />
+    <Compile Include="Models\ProfileConfigurationModel.cs" />
+    <Compile Include="Providers\ProductExportXmlProvider.cs" />
     <Compile Include="Models\FeedFroogleModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteProvider.cs" />
@@ -205,7 +206,7 @@
     <EmbeddedResource Include="Data\Migrations\201403112356126_Initial.resx">
       <DependentUpon>201403112356126_Initial.cs</DependentUpon>
     </EmbeddedResource>
-    <Content Include="Views\FeedFroogle\Configure.cshtml">
+    <Content Include="Views\FeedGoogleMerchantCenter\Configure.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <EmbeddedResource Include="Data\Migrations\201408020941244_IsTouched.resx">
@@ -216,8 +217,8 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\images\mc_logo.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <Content Include="Content\branding.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\smartstore.feed.froogle.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -226,10 +227,10 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Files\taxonomy.de-DE.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Files\taxonomy.en-US.txt">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Content\icon.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -257,12 +258,17 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\FeedFroogle\ProductEditTab.cshtml">
+    <Content Include="Views\FeedGoogleMerchantCenter\ProductEditTab.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
   <ItemGroup>
     <Content Include="changelog.md">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\FeedGoogleMerchantCenter\ProfileConfiguration.cshtml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
