Tested order entity export and export via volatile export profile

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -169,14 +169,17 @@
     <Compile Include="Common\TempFileCleanupTask.cs" />
     <Compile Include="Common\UAParserUserAgent.cs" />
     <Compile Include="Customers\CustomerRegisteredEvent.cs" />
+    <Compile Include="DataExchange\ExportConfigurationInfo.cs" />
+    <Compile Include="DataExchange\ExportTask\ExportProfileTaskContext.cs" />
+    <Compile Include="DataExchange\ExportExecuteResult.cs" />
     <Compile Include="DataExchange\ISyncMappingService.cs" />
     <Compile Include="DataExchange\SyncMappingService.cs" />
     <Compile Include="DataExchange\ExpandoExtensions.cs" />
-    <Compile Include="DataExchange\ExportOrderDataContext.cs" />
-    <Compile Include="DataExchange\ExportProductDataContext.cs" />
+    <Compile Include="DataExchange\ExportTask\ExportOrderDataContext.cs" />
+    <Compile Include="DataExchange\ExportTask\ExportProductDataContext.cs" />
     <Compile Include="DataExchange\ExportExecuteContext.cs" />
     <Compile Include="DataExchange\ExportExtensions.cs" />
-    <Compile Include="DataExchange\ExportProfileTask.cs" />
+    <Compile Include="DataExchange\ExportTask\ExportProfileTask.cs" />
     <Compile Include="DataExchange\ExportAttributes.cs" />
     <Compile Include="DataExchange\ExportSegmenter.cs" />
     <Compile Include="Directory\QuantityUnitService.cs" />
