Convert product XML export to support new export framework (part 1)

--- a/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
+++ b/src/Libraries/SmartStore.Services/SmartStore.Services.csproj
@@ -170,10 +170,12 @@
     <Compile Include="Common\UAParserUserAgent.cs" />
     <Compile Include="Customers\CustomerRegisteredEvent.cs" />
     <Compile Include="DataExchange\ExportConfigurationInfo.cs" />
-    <Compile Include="DataExchange\ExportProvider\OrderExportXlsxProvider.cs" />
-    <Compile Include="DataExchange\ExportProvider\OrderExportXmlProvider.cs" />
+    <Compile Include="DataExchange\ExportProvider\ExportOrderXlsxProvider.cs" />
+    <Compile Include="DataExchange\ExportProvider\ExportProductXmlProvider.cs" />
+    <Compile Include="DataExchange\ExportProvider\ExportOrderXmlProvider.cs" />
     <Compile Include="DataExchange\ExportTask\ExportProfileTaskContext.cs" />
     <Compile Include="DataExchange\ExportExecuteResult.cs" />
+    <Compile Include="DataExchange\ExportXmlHelper.cs" />
     <Compile Include="DataExchange\ISyncMappingService.cs" />
     <Compile Include="DataExchange\SyncMappingService.cs" />
     <Compile Include="DataExchange\ExpandoExtensions.cs" />
